--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ APP_SECRET=6d8c7c3195d00f68458ca3ab62337174
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 
-    DATABASE_URL="mysql://digit:root@localhost:3306/symf?serverVersion=mariadb-10.4.17"
+    DATABASE_URL="mysql://root:@localhost:3306/symf?serverVersion=mariadb-10.4.17"
 
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
